force-app/main/default/objects/Dice_com_Job_Form__c/Dice_com_Job_Form__c.object-meta.xml
<CustomObject>
    <label>Dice.com Job Form</label>
    <nameField>
        <displayFormat>Form-{0}</displayFormat>
        <label>Dice.com Job Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dice.com Job Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>