force-app/main/default/objects/Dice_com_Job_Form__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <formula>CEILING(TODAY() -  DOB__c) / 365</formula>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>