force-app/main/default/objects/Dice_com_Job_Form__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <formula>LEFT( Last_name__c , 5)   &amp;  &apos;-&apos;   &amp;  RIGHT( TEXT( SSN__c ) , 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alias</label>
    <type>Text</type>
</CustomField>