force-app/main/default/objects/Dice_com_Job_Form__c/fields/Birthday_this_month__c.field-meta.xml
<CustomField>
    <fullName>Birthday_this_month__c</fullName>
    <formula>IF(  MONTH(DOB__c ) =  MONTH( TODAY() )  , &apos;YES&apos;,&apos;NO&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Birthday this month</label>
    <type>Text</type>
</CustomField>