force-app/main/default/objects/Dice_com_Job_Form__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <formula>IF( LEN( TEXT( Country__c ) ) &gt; 9 , True, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client</label>
    <type>Checkbox</type>
</CustomField>