force-app/main/default/objects/Dice_com_Job_Form__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>IF( Bill__c  &gt; 1000, 100,  10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>