force-app/main/default/objects/Dice_com_Job_Form__c/fields/Marital__c.field-meta.xml
<CustomField>
    <fullName>Marital__c</fullName>
    <label>Marital Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Unmarried</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>