force-app/main/default/objects/Dice_com_Job_Form__c/fields/Outlook_Name__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Name__c</fullName>
    <formula>CASE( TEXT( Gender__c ) , &apos;Male&apos;,&apos;Mr.&apos;, CASE(TEXT(Marital__c), &apos;Married&apos;,&apos;Mrs.&apos;, &apos;Ms.&apos;) ) &amp;  Last_name__c  &amp; &apos;,&apos; &amp;  First_Name__c</formula>
    <label>Outlook Name</label>
    <type>Text</type>
</CustomField>