force-app/main/default/objects/Dice_com_Job_Form__c/fields/Partner_link__c.field-meta.xml
<CustomField>
    <fullName>Partner_link__c</fullName>
    <formula>HYPERLINK(&apos;http://www.bing.com&apos;, &apos;Link&apos;)</formula>
    <label>Partner link</label>
    <type>Text</type>
</CustomField>