force-app/main/default/objects/Dice_com_Job_Form__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <inlineHelpText>Nine-Digit SSN</inlineHelpText>
    <label>SSN</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>