force-app/main/default/objects/Dice_com_Job_Form__c/validationRules/Experience.validationRule-meta.xml
<ValidationRule>
    <fullName>Experience</fullName>
    <active>true</active>
    <errorConditionFormula>(
 Experience__c  = 0
 || 
 Experience__c  &gt; 20)
 &amp;&amp; 
 ISPICKVAL( Country__c , &apos;India&apos;)</errorConditionFormula>
    <errorDisplayField>Experience__c</errorDisplayField>
    <errorMessage>Indian applicants must have experience not more than 20 years.</errorMessage>
</ValidationRule>